fix: overflow bug

--- a/src/output.css
+++ b/src/output.css
@@ -465,6 +465,9 @@
   .overflow-hidden {
     overflow: hidden;
   }
+  .overflow-x-hidden {
+    overflow-x: hidden;
+  }
   .scroll-smooth {
     scroll-behavior: smooth;
   }
